--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@apollo/client-integration-tanstack-start": "0.12.3-alpha.5",
+    "@tanstack/react-form": "^1.14.0",
     "@tanstack/react-router": "^1.125.4",
     "@tanstack/react-start": "^1.125.5",
     "graphql": "^16.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "ts-pattern": "^5.7.1",
     "vite": "^7.0.2"
   },
   "devDependencies": {
