--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@apollo/client-integration-tanstack-start": "0.12.3-alpha.5",
+    "@phosphor-icons/react": "^2.1.10",
     "@tanstack/react-form": "^1.14.0",
     "@tanstack/react-router": "^1.125.4",
     "@tanstack/react-start": "^1.125.5",
