--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "ts-pattern": "^5.7.1",
-    "vite": "^7.0.2"
+    "vite": "^7.0.2",
+    "zod": "^3.25.75"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
