--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
+    "start": "vite start",
     "build": "vite build"
   },
   "keywords": [],
