Dashboard page changes.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-router": "^1.125.4",
     "@tanstack/react-start": "^1.125.5",
     "graphql": "^16.11.0",
+    "luxon": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "ts-pattern": "^5.7.1",
@@ -35,6 +36,7 @@
     "@graphql-codegen/typescript-operations": "^4.6.1",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@pandacss/dev": "^0.54.0",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "typescript": "^5.8.3",
