Created my own form library. Added register and simulation context menu.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tanstack/react-form": "^1.14.0",
     "@tanstack/react-router": "^1.125.4",
     "@tanstack/react-start": "^1.125.5",
+    "@tanstack/react-store": "^0.7.3",
+    "@tanstack/store": "^0.7.2",
     "graphql": "^16.11.0",
     "luxon": "^3.7.1",
     "react": "^19.1.0",
