fixed issues with select.

--- a/biome.json
+++ b/biome.json
@@ -18,6 +18,9 @@
 			"recommended": true,
 			"suspicious": {
 				"noExplicitAny": "off"
+			},
+			"a11y": {
+				"useSemanticElements": "off"
 			}
 		}
 	},
