Last viewed scenario now works properly.

--- a/biome.json
+++ b/biome.json
@@ -19,6 +19,9 @@
 			"suspicious": {
 				"noExplicitAny": "off"
 			},
+			"correctness": {
+				"useExhaustiveDependencies": "off",
+			},
 			"a11y": {
 				"useSemanticElements": "off"
 			}
