Updates to card and added last opened at.

--- a/biome.json
+++ b/biome.json
@@ -20,7 +20,7 @@
 				"noExplicitAny": "off"
 			},
 			"correctness": {
-				"useExhaustiveDependencies": "off",
+				"useExhaustiveDependencies": "off"
 			},
 			"a11y": {
 				"useSemanticElements": "off"
