--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@tanstack/store": "^0.7.2",
     "graphql": "^16.11.0",
     "luxon": "^3.7.1",
-    "mapbox-gl": "^3.13.0",
+    "maplibre-gl": "^5.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "ts-pattern": "^5.7.1",
@@ -43,7 +43,6 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@pandacss/dev": "^0.54.0",
     "@types/luxon": "^3.6.2",
-    "@types/mapbox-gl": "^3.4.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "typescript": "^5.8.3",
